# App-Review-Analyzer

./: .env.example  .gitignore  Dockerfile  README.md  app.py  pyproject.toml
plots/: decode_base64_img.py
src/data_analysis/: hf_pipelines.py  metrics.py  plots.py  sentiment_analysis.py
src/llm/: chat_models.py  jinja_config.py  llm_pipeline.py  output_parser.py
src/llm/prompts/: __init__.py  human.jinja2  system.jinja2
src/models/: __init__.py  review.py
src/scrapers/: app_store.py  google_play_market.py
utils/: decode_base64_img.py  search_google_play.py
